force-app/main/default/objects/Revenue_Leak_Config__c/Revenue_Leak_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Revenue Leak Config</label>
</CustomObject>