force-app/main/default/objects/Revenue_Leak_Config__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the digest is also emailed to the owner (in addition to the in-app bell notification).</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>